# POO-Game-StarUML-2D-Cplusplus

./: Alien.cpp  Alien.h  Botao.cpp  Botao.h  BuracoInfinito.cpp  BuracoInfinito.h  Caixote.cpp  Caixote.h  CampoTexto.cpp  CampoTexto.h  Chefao.cpp  Chefao.h  Ciclope.cpp  Ciclope.h  Colidivel.cpp  Colidivel.h  Cor.cpp  Cor.h  Desenhavel.cpp  Desenhavel.h  Entidade.cpp  Entidade.h  EntidadeFisica.cpp  EntidadeFisica.h  Estado.cpp  Estado.h  Fase.cpp  Fase.h  FaseExemplo.cpp  FaseExemplo.h  FaseFinal.cpp  FaseFinal.h  Frida.cpp  Frida.h  GerenciadorBotoes.cpp  GerenciadorBotoes.h  GerenciadorColisao.cpp  GerenciadorColisao.h  GerenciadorEstados.cpp  GerenciadorEstados.h  (+78 more)
TileMap/: Exemplo.tsx  TileMap.json  floresta.tsx  jogo.json  mapajogo.json  tile.tmx  tile1.tmx  tilemapJogo.json
UML/: UML-JOGO.mdj
jogos-salvos/: jogo_salvo.json
