project('Jogo', 'cpp', version: '0.1')

sfml_dep = dependency('sfml-all')

src = [
'Botao.cpp',
'BuracoInfinito.cpp',
'Caixote.cpp',
'CampoTexto.cpp',
'Ciclope.cpp',
'Colidivel.cpp',
'Cor.cpp',
'Desenhavel.cpp',
'Entidade.cpp',
'EntidadeFisica.cpp',
'Estado.cpp',
'Fase.cpp',
'Frida.cpp',
'GerenciadorBotoes.cpp',
'GerenciadorColisao.cpp',
'GerenciadorEstados.cpp',
'GerenciadorEventos.cpp',
'GerenciadorGrafico.cpp',
'GerenciadorTelas.cpp',
'GerenciadorTile.cpp',
'Hospital.cpp',
'Inimigo.cpp',
'Jogador.cpp',
'Kahlo.cpp',
'LagartoVerde.cpp',
'ListaDesenhaveis.cpp',
'main.cpp',
'Manicomio.cpp',
'MenuConfiguracoes.cpp',
'Menu.cpp',
'MenuJogador.cpp',
'MenuPausa.cpp',
'MenuPrincipal.cpp',
'NomeJogadores.cpp',
'Obstaculo.cpp',
'Principal.cpp',
'Projetil.cpp',
'PromessaTexto.cpp',
'Relogio.cpp',
'Robotao.cpp',
'Salvavel.cpp',
'Score.cpp',
'Serializavel.cpp',
'Tile.cpp',
'TileMap.cpp'
]


executable('Jogo', src, dependencies: [sfml_dep])